--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,13 @@
 <!--index.wxml-->
 <view class="page">
     <view class="page-bd">
-		<block wx:if="{{index==0}}">
-    	<include src="../home/home"/>
-		</block>
-		<block wx:else>
-			<view>这是第二个页面</view>
-		</block>
+
+		<view hidden="{{index == 0? false: true}}">
+			<component_home/>
+		</view>
+		<view hidden="{{currentTab == 1? false: true}}">
+			<component_car/>
+		</view>
 	</view>
     <mp-tabbar style="position:fixed;bottom:0;width:100%;left:0;right:0;" list="{{list}}" bindchange="tabChange"></mp-tabbar>
 </view>
